--- a/css/style.css
+++ b/css/style.css
@@ -1,119 +1,104 @@
-<<<<<<< HEAD
-
-.col-lg-3 ,.col-md-6 {
-background-color: blue;
-border: 1px solid white;
-height: 80px;
-}
 
 
-.col-lg-2 ,.col-md-4 {
-background-color: blueviolet;
-border: 1px solid white;
-height: 80px;
-}
 
 
-.col-lg-4 ,.col-md-12 {
-background-color: green;
-border: 1px solid white; 
-height: 80px;
-}
+ .color-purple {
+        background-color: #E9C7FF;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
 
-.color-green{
-    background-color: green;
-    height: 80px;
-    border:1px solid #fff;
-    text-align: center;
-}
+    .color-green {
+        background-color: #9DFFB4;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
 
-.color-blue{
-    background-color: rgb(112, 10, 228);
-    height: 80px;
-    border:1px solid #fff;
-    text-align: center;
-}
+    .color-orange{
+        background-color: #FFD7C7;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
 
-.color-pink{
-    background-color: rgb(233, 184, 211);
-    height: 80px;
-    border:1px solid #fff;
-    text-align: center;
-}
+    .color-blue {
+        background-color: #C7D6FF;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
 
-.color-red{
-    background-color: rgb(236, 24, 35);
-    height: 80px;
-    border:1px solid #fff;
-    text-align: center;
-}
+    .color-pink {
+        background-color: #FFD7C7;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
 
-.color-yellow{
-   background-color: rgb(238, 234, 12);
-    height: 80px;
-    border:1px solid #fff;
-    text-align: center; 
-}
+    
+    .color-green1 {
+        background-color: #9DFFB4;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
 
-.color-gray{
-   background-color: rgb(215, 208, 219);
-    height: 80px;
-    border:1px solid #fff;
-    text-align: center; 
-}
-.color-yellow{
-   background-color: rgb(238, 234, 12);
-    height: 80px;
-    border:1px solid #fff;
-    text-align: center; 
-}
-.color-orange{
-   background-color: rgb(216, 94, 12);
-    height: 80px;
-    border:1px solid #fff;
-    text-align: center; 
-}
+    .color-green2 {
+        background-color: #3FFF6C;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
 
-.color-dark{
-    background-color: rgb(15, 15, 14);
-    height: 80px;
-    border:1px solid #fff;
-    text-align: center; 
-}
 
-.color-blue{
-    background-color: rgb(33, 53, 238);
-    height: 80px;
-    border:1px solid #fff;
-    text-align: center; 
-}
-.color-bluesky{
-    background-color: rgb(34, 207, 199);
-    height: 80px;
-    border:1px solid #fff;
-    text-align: center; 
-}
+    .color-green3 {
+        background-color: #00C72F;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
 
-.color-green{
-    background-color: rgb(27, 245, 27);
-    height: 80px;
-    border:1px solid #fff;
-}
+    .color-orange1 {
+        background-color: #FF7F4C;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
 
-.color-blue{
-    background-color: rgb(133, 207, 241);
-    height: 80px;
-     border:1px solid #fff;
-}
+    .color-orange2 {
+        background-color: #FFA37E;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
 
-.color-pink{
-    background-color: rgb(238, 171, 208);
-    height: 80px;
-     border:1px solid #fff;
-}
+    .color-orange3 {
+        background-color: #FFD7C7;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
 
-.color-red{
-    background-color: rgb(250, 109, 116);
-    height: 80px;
-     border:1px solid #fff;
-}
+
+
+    .color-blue1 {
+        background-color: #C7D6FF;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
+     .color-blue2 {
+        background-color: #678FFF;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
+
+     .color-blue3 {
+        background-color: #0044FF;
+        height: 80px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
